ocaml/testsuite/tests/jane-modular-syntax/user_error3.compilers.reference
File "user_error3.ml", line 24, characters 2-4:
24 |   ()
       ^^
Error: All attribute embeddings are expected to contain a location attribute,
       but one was missing here.
